--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
-  <head> -- 메타데이터가 들어가는 head tag
+  <head>
     <title>My Simple Homepage</title>
   </head>
-  <body> -- 실제 데이터가 들어가는 body
+  <body>
     <h1>Title of My Simple Homepage</h1>
     <h2>Subtitle</h2>
     <p>Paragraph.</p>
