--- a/index.html
+++ b/index.html
@@ -1,10 +1,175 @@
-<html>
-  <head>
-    <title>My Simple Homepage</title>
-  </head>
-  <body>
-    <h1>Title of My Simple Homepage</h1>
-    <h2>Subtitle</h2>
-    <p>Paragraph.</p>
-  </body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>RandomPay – Your Fintech Playground</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="The most playful, secure, and innovative way to manage your money.">
+  <link rel="icon" href="https://cdn.jsdelivr.net/gh/twitter/twemoji@14.0.2/assets/72x72/1f4b0.png">
+  <style>
+    :root {
+      --primary: #2b6cff;
+      --secondary: #0f1629;
+      --accent: #00ffd0;
+      --bg: #f7f8fa;
+      --radius: 1.5rem;
+    }
+    html, body {
+      height: 100%;
+      margin: 0;
+      font-family: 'Inter', 'Segoe UI', Arial, sans-serif;
+      background: var(--bg);
+      color: var(--secondary);
+    }
+    .hero {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      min-height: 90vh;
+      text-align: center;
+      padding: 2rem;
+    }
+    .logo {
+      width: 70px;
+      height: 70px;
+      border-radius: 50%;
+      margin-bottom: 1.2rem;
+      background: var(--primary);
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-size: 2.2rem;
+      color: #fff;
+      box-shadow: 0 4px 24px #2b6cff22;
+      transition: box-shadow 0.2s;
+    }
+    h1 {
+      font-size: 2.6rem;
+      font-weight: 800;
+      letter-spacing: -1px;
+      margin: 0 0 0.6rem 0;
+      background: linear-gradient(90deg, var(--primary), var(--accent));
+      color: transparent;
+      -webkit-background-clip: text;
+      background-clip: text;
+    }
+    .subtitle {
+      font-size: 1.2rem;
+      color: #444c63;
+      margin-bottom: 2.2rem;
+      max-width: 420px;
+      margin-left: auto;
+      margin-right: auto;
+      line-height: 1.6;
+    }
+    .cta {
+      display: inline-block;
+      padding: 1rem 2.4rem;
+      border-radius: var(--radius);
+      background: linear-gradient(90deg, var(--primary) 60%, var(--accent) 100%);
+      color: #fff;
+      font-weight: bold;
+      font-size: 1.1rem;
+      box-shadow: 0 2px 14px #2b6cff33;
+      text-decoration: none;
+      transition: background 0.18s, box-shadow 0.18s, transform 0.11s;
+      margin-bottom: 0.5rem;
+    }
+    .cta:hover {
+      background: linear-gradient(90deg, var(--accent), var(--primary));
+      box-shadow: 0 4px 24px #2b6cff44;
+      transform: translateY(-2px) scale(1.03);
+    }
+    .features {
+      margin-top: 2.8rem;
+      display: flex;
+      flex-wrap: wrap;
+      gap: 1.6rem;
+      justify-content: center;
+      max-width: 850px;
+      margin-left: auto;
+      margin-right: auto;
+    }
+    .feature-card {
+      background: #fff;
+      border-radius: var(--radius);
+      box-shadow: 0 2px 12px #2222ff0a;
+      padding: 1.4rem 1.8rem;
+      flex: 1 1 250px;
+      min-width: 210px;
+      max-width: 270px;
+      text-align: left;
+      transition: box-shadow 0.15s;
+    }
+    .feature-card:hover {
+      box-shadow: 0 6px 28px #2b6cff18;
+    }
+    .feature-icon {
+      font-size: 1.7rem;
+      margin-bottom: 0.7rem;
+      color: var(--primary);
+    }
+    .feature-title {
+      font-weight: 700;
+      margin-bottom: 0.3rem;
+      color: var(--secondary);
+    }
+    .feature-desc {
+      font-size: 0.97rem;
+      color: #575c7a;
+    }
+    .footer {
+      text-align: center;
+      font-size: 0.97rem;
+      color: #8a91b5;
+      padding: 1.6rem 0 0.7rem 0;
+      margin-top: 3rem;
+    }
+    @media (max-width: 700px) {
+      h1 { font-size: 2.1rem; }
+      .features { flex-direction: column; gap: 1.2rem; }
+      .feature-card { max-width: 100%; }
+    }
+  </style>
+</head>
+<body>
+  <main>
+    <section class="hero">
+      <div class="logo">💸</div>
+      <h1>RandomPay</h1>
+      <div class="subtitle">
+        The most playful, secure, and innovative way to manage your money.<br>
+        <span style="color:var(--primary);font-weight:600;">Smarter spending. Random rewards. Real fun.</span>
+      </div>
+      <a class="cta" href="#get-started">Get Early Access</a>
+      <div class="features">
+        <div class="feature-card">
+          <div class="feature-icon">🔒</div>
+          <div class="feature-title">Bulletproof Security</div>
+          <div class="feature-desc">Your assets are protected by bank-level encryption and AI-powered fraud detection.</div>
+        </div>
+        <div class="feature-card">
+          <div class="feature-icon">🤖</div>
+          <div class="feature-title">AI-Powered Savings</div>
+          <div class="feature-desc">Our smart engine auto-saves for you and invests your spare change with zero effort.</div>
+        </div>
+        <div class="feature-card">
+          <div class="feature-icon">🎲</div>
+          <div class="feature-title">Random Rewards</div>
+          <div class="feature-desc">Earn surprise cashback and bonuses just for using your card—everyday is a new chance!</div>
+        </div>
+        <div class="feature-card">
+          <div class="feature-icon">📊</div>
+          <div class="feature-title">Instant Insights</div>
+          <div class="feature-desc">Track your money, set budgets, and analyze your habits—all in a single tap.</div>
+        </div>
+      </div>
+    </section>
+    <footer class="footer">
+      &copy; 2025 RandomPay. Made with 💙 for fintech explorers.<br>
+      <a href="mailto:hello@randompay.com" style="color:var(--primary);text-decoration:none;">Contact</a>
+    </footer>
+  </main>
+</body>
 </html>
