--- a/index.html
+++ b/index.html
@@ -1,63 +1,73 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
   <meta charset="UTF-8">
-  <title>RandomPay – Your Fintech Playground</title>
+  <title>마토마 – 토마토 같은 목적 없는 랜딩페이지</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="The most playful, secure, and innovative way to manage your money.">
-  <link rel="icon" href="https://cdn.jsdelivr.net/gh/twitter/twemoji@14.0.2/assets/72x72/1f4b0.png">
+  <meta name="description" content="마토마, 목적이 없는 것이 목적. 당신의 일상에 무의미한 농담 한 스푼.">
+  <link rel="icon" href="https://cdn.jsdelivr.net/gh/twitter/twemoji@14.0.2/assets/72x72/1f345.png">
   <style>
     :root {
-      --primary: #2b6cff;
-      --secondary: #0f1629;
-      --accent: #00ffd0;
-      --bg: #f7f8fa;
-      --radius: 1.5rem;
+      --tomato: #ff6347;
+      --green: #39b54a;
+      --cream: #fffaf3;
+      --dark: #231f20;
+      --shadow: #ff634799;
+      --radius: 1.8rem;
     }
     html, body {
-      height: 100%;
+      min-height: 100vh;
+      background: 
+        repeating-linear-gradient(-45deg, var(--tomato), var(--tomato) 12px, transparent 12px, transparent 32px),
+        repeating-linear-gradient(45deg, #fff5, #fff5 20px, transparent 20px, transparent 36px),
+        var(--cream);
+      font-family: 'Pretendard', 'Inter', 'Apple SD Gothic Neo', Arial, sans-serif;
+      color: var(--dark);
       margin: 0;
-      font-family: 'Inter', 'Segoe UI', Arial, sans-serif;
-      background: var(--bg);
-      color: var(--secondary);
     }
     .hero {
+      min-height: 88vh;
       display: flex;
       flex-direction: column;
-      align-items: center;
       justify-content: center;
-      min-height: 90vh;
+      align-items: center;
       text-align: center;
+      position: relative;
+      z-index: 1;
       padding: 2rem;
     }
     .logo {
-      width: 70px;
-      height: 70px;
+      width: 90px;
+      height: 90px;
+      background: radial-gradient(circle 38px at 40% 45%, #fff 35%, var(--tomato) 100%);
       border-radius: 50%;
-      margin-bottom: 1.2rem;
-      background: var(--primary);
       display: flex;
       align-items: center;
       justify-content: center;
-      font-size: 2.2rem;
-      color: #fff;
-      box-shadow: 0 4px 24px #2b6cff22;
-      transition: box-shadow 0.2s;
+      font-size: 2.7rem;
+      margin-bottom: 1.2rem;
+      box-shadow: 0 6px 32px var(--shadow);
+      border: 3.5px dashed var(--green);
+      cursor: pointer;
+      user-select: none;
+      transition: transform 0.13s;
     }
+    .logo:active { transform: scale(1.11) rotate(-5deg); }
     h1 {
-      font-size: 2.6rem;
-      font-weight: 800;
-      letter-spacing: -1px;
-      margin: 0 0 0.6rem 0;
-      background: linear-gradient(90deg, var(--primary), var(--accent));
-      color: transparent;
-      -webkit-background-clip: text;
-      background-clip: text;
+      font-size: 3.4rem;
+      font-weight: 900;
+      letter-spacing: -1.5px;
+      margin: 0 0 0.5rem 0;
+      color: var(--tomato);
+      text-shadow: 0 2px 14px #ff634733;
+      font-family: 'Gugi', cursive, sans-serif;
+      line-height: 1.1;
     }
     .subtitle {
-      font-size: 1.2rem;
-      color: #444c63;
+      color: var(--green);
+      font-size: 1.25rem;
       margin-bottom: 2.2rem;
+      font-style: italic;
       max-width: 420px;
       margin-left: auto;
       margin-right: auto;
@@ -65,110 +75,139 @@
     }
     .cta {
       display: inline-block;
-      padding: 1rem 2.4rem;
+      padding: 1.1rem 2.7rem;
       border-radius: var(--radius);
-      background: linear-gradient(90deg, var(--primary) 60%, var(--accent) 100%);
+      background: linear-gradient(90deg, var(--tomato) 65%, var(--green) 100%);
       color: #fff;
-      font-weight: bold;
-      font-size: 1.1rem;
-      box-shadow: 0 2px 14px #2b6cff33;
+      font-weight: 700;
+      font-size: 1.15rem;
+      border: none;
+      box-shadow: 0 4px 22px var(--shadow);
+      cursor: pointer;
       text-decoration: none;
-      transition: background 0.18s, box-shadow 0.18s, transform 0.11s;
-      margin-bottom: 0.5rem;
+      transition: background 0.15s, transform 0.08s;
+      margin-bottom: 0.7rem;
+      letter-spacing: 1.5px;
+      font-family: 'Gugi', cursive, sans-serif;
+      position: relative;
+      z-index: 2;
     }
     .cta:hover {
-      background: linear-gradient(90deg, var(--accent), var(--primary));
-      box-shadow: 0 4px 24px #2b6cff44;
-      transform: translateY(-2px) scale(1.03);
+      background: linear-gradient(90deg, var(--green), var(--tomato) 80%);
+      color: var(--tomato);
+      transform: scale(1.05) rotate(-2deg);
+      border: 1.5px solid var(--tomato);
     }
     .features {
-      margin-top: 2.8rem;
+      margin-top: 2.6rem;
       display: flex;
       flex-wrap: wrap;
-      gap: 1.6rem;
+      gap: 1.5rem;
       justify-content: center;
-      max-width: 850px;
+      max-width: 820px;
       margin-left: auto;
       margin-right: auto;
+      z-index: 1;
     }
     .feature-card {
-      background: #fff;
+      background: #fff7f3cc;
       border-radius: var(--radius);
-      box-shadow: 0 2px 12px #2222ff0a;
-      padding: 1.4rem 1.8rem;
-      flex: 1 1 250px;
-      min-width: 210px;
-      max-width: 270px;
+      box-shadow: 0 2px 14px #ff63471a;
+      border: 2.5px dashed var(--tomato);
+      padding: 1.3rem 1.4rem 1.1rem 1.4rem;
+      min-width: 200px;
+      max-width: 250px;
+      flex: 1 1 220px;
       text-align: left;
-      transition: box-shadow 0.15s;
+      transition: box-shadow 0.15s, border 0.16s;
+      position: relative;
     }
     .feature-card:hover {
-      box-shadow: 0 6px 28px #2b6cff18;
+      box-shadow: 0 6px 36px #ff63472c;
+      border: 2.5px solid var(--green);
     }
     .feature-icon {
       font-size: 1.7rem;
-      margin-bottom: 0.7rem;
-      color: var(--primary);
+      margin-bottom: 0.45rem;
+      color: var(--green);
+      filter: drop-shadow(0 0 2px #ff634799);
     }
     .feature-title {
-      font-weight: 700;
-      margin-bottom: 0.3rem;
-      color: var(--secondary);
+      font-weight: 800;
+      margin-bottom: 0.2rem;
+      color: var(--tomato);
+      font-family: 'Gugi', cursive, sans-serif;
+      letter-spacing: 0.5px;
     }
     .feature-desc {
-      font-size: 0.97rem;
-      color: #575c7a;
+      font-size: 1.01rem;
+      color: #282828c0;
+      font-style: italic;
     }
     .footer {
       text-align: center;
-      font-size: 0.97rem;
-      color: #8a91b5;
-      padding: 1.6rem 0 0.7rem 0;
-      margin-top: 3rem;
+      font-size: 1.02rem;
+      color: #bdbdbd;
+      padding: 1.8rem 0 0.6rem 0;
+      margin-top: 2rem;
+      font-family: 'Pretendard', 'Inter', Arial, sans-serif;
+      letter-spacing: 1px;
+      user-select: none;
     }
-    @media (max-width: 700px) {
-      h1 { font-size: 2.1rem; }
+    .footer a {
+      color: var(--tomato);
+      text-decoration: none;
+      margin-left: 7px;
+    }
+    /* 커서에 토마토 추가 */
+    body {
+      cursor: url('https://cdn.jsdelivr.net/gh/twitter/twemoji@14.0.2/assets/72x72/1f345.png') 16 16, auto;
+    }
+    @media (max-width: 800px) {
       .features { flex-direction: column; gap: 1.2rem; }
-      .feature-card { max-width: 100%; }
+      .feature-card { max-width: 98vw; }
+      h1 { font-size: 2.1rem; }
     }
   </style>
+  <!-- 구글 Gugi 폰트 (한글/영문 자유롭게) -->
+  <link href="https://fonts.googleapis.com/css2?family=Gugi&display=swap" rel="stylesheet">
 </head>
 <body>
   <main>
     <section class="hero">
-      <div class="logo">💸</div>
-      <h1>RandomPay</h1>
+      <div class="logo" title="클릭해도 아무 일도 안 일어남">🍅</div>
+      <h1>마토마</h1>
       <div class="subtitle">
-        The most playful, secure, and innovative way to manage your money.<br>
-        <span style="color:var(--primary);font-weight:600;">Smarter spending. Random rewards. Real fun.</span>
+        목적이 없는 것이<br><b>이 페이지의 목적</b>입니다.<br>
+        <span style="color:var(--tomato);font-weight:600;">이상하게 진지한 토마토 같은 무의미, 그게 마토마.</span>
       </div>
-      <a class="cta" href="#get-started">Get Early Access</a>
+      <a class="cta" href="#get-nowhere" title="이 버튼은 아무데도 데려다주지 않아요!">아무데도 가지 않기</a>
       <div class="features">
         <div class="feature-card">
-          <div class="feature-icon">🔒</div>
-          <div class="feature-title">Bulletproof Security</div>
-          <div class="feature-desc">Your assets are protected by bank-level encryption and AI-powered fraud detection.</div>
+          <div class="feature-icon">🫛</div>
+          <div class="feature-title">쓸모없는 기능</div>
+          <div class="feature-desc">누르면 아무 일도 안 일어나요. <br>진짜로.</div>
         </div>
         <div class="feature-card">
-          <div class="feature-icon">🤖</div>
-          <div class="feature-title">AI-Powered Savings</div>
-          <div class="feature-desc">Our smart engine auto-saves for you and invests your spare change with zero effort.</div>
+          <div class="feature-icon">🍅</div>
+          <div class="feature-title">토마토를 닮은 무언가</div>
+          <div class="feature-desc">토마토 같지만, 토마토는 아니에요.<br>마토마, 그 자체.</div>
         </div>
         <div class="feature-card">
-          <div class="feature-icon">🎲</div>
-          <div class="feature-title">Random Rewards</div>
-          <div class="feature-desc">Earn surprise cashback and bonuses just for using your card—everyday is a new chance!</div>
+          <div class="feature-icon">🥄</div>
+          <div class="feature-title">진지하게 농담</div>
+          <div class="feature-desc">진심으로 무의미함을 추구합니다. <br>별 뜻 없어요.</div>
         </div>
         <div class="feature-card">
-          <div class="feature-icon">📊</div>
-          <div class="feature-title">Instant Insights</div>
-          <div class="feature-desc">Track your money, set budgets, and analyze your habits—all in a single tap.</div>
+          <div class="feature-icon">🔄</div>
+          <div class="feature-title">언제든 리프레시</div>
+          <div class="feature-desc">새로고침하면<br>아무 것도 달라지지 않아요.</div>
         </div>
       </div>
     </section>
     <footer class="footer">
-      &copy; 2025 RandomPay. Made with 💙 for fintech explorers.<br>
-      <a href="mailto:hello@randompay.com" style="color:var(--primary);text-decoration:none;">Contact</a>
+      &copy; 2025 마토마. <span>토마토 아니고, 마토마.</span><br>
+      <a href="mailto:nobody@matoma.com" title="답장 안 옴">문의도 환영하지 않음</a>
     </footer>
   </main>
 </body>
